Solved some urgent contrast issues with illegible texts

--- a/src/tokens.css
+++ b/src/tokens.css
@@ -1,4 +1,5 @@
 :root {
+  --sanstream-orange-on-white: #ab3e01;
   --sanstream-orange: #FF5C00;
   --sanstream-yellow: #FE9800;
   --lightest-colour: #ffffff;
